--- a/Contact.html
+++ b/Contact.html
@@ -74,7 +74,7 @@
     <p class="card-text fs-5"> Name: ชาญณรงค์ ดวงสุภา </p>
     <p class="card-text fs-5"> Nickname: กีต้า</p>
     <p class="card-text fs-5"> Address: 200/89 ต.พระบาท อ.เมือง จ.ลำปาง 52000</p>
-    <p class="card-text fs-5"> Facebook: <a href="https://www.facebook.com/profile.php?id=100048553044073" target=_blank>https://www.facebook.com/profile.php?id=100048553044073</a></p>
+    <p class="card-text fs-5"> Facebook: <a href="https://www.facebook.com/profile.php?id=100048553044073" target=_blank>https://www.facebook.com/คุณชาย ชาญณรงค์</a></p>
     <p class="card-text fs-5"> Email:  <a href="mailto:Channarong_Duangsupa@.ac.th" target=_blank>Channarong_Duangsupa@.ac.th</a></p>
     <p class="card-text fs-5"> phone: 0947028889</p>
     <p class="card-text fs-5"> Freelance: available</p>
